tests/core/testsuite/rtlCeil.fal
/****************************************************************************
* Falcon test suite
*
* ID: 113c
* Category: rtl
* Subcategory: math
* Short: ceil
* Description:
*   Checks for correct working of ceil() function.
* [/Description]
****************************************************************************/

// Integer numbers
if ceil( 1 ) != 1: failure( "ceil integer positive" )
if ceil( -1 ) != -1: failure( "ceil integer negative" )
if ceil( 0 ) != 0: failure( "ceil zero" )

// real ceils
// positive
if int( ceil( 1.0 ) ) != 1: failure( "ceil on .0 (int)" )
if fract( ceil( 1.0 ) ) != 0: failure( "ceil on .0 (fract)" )
if int( ceil( 1.4999 ) ) != 2: failure( "ceil positive down (int)" )
if fract( ceil( 1.49999999 ) ) != 0: failure( "ceil positive down (fract)" )
if int( ceil( 1.5 ) ) != 2: failure( "ceil positive edge (int)" )
if fract( ceil( 1.5 ) ) != 0: failure( "ceil positive edge (fract)" )
if int( ceil( 1.99999999 ) ) != 2: failure( "ceil positive up (int)" )
if fract( ceil( 1.99999999 ) ) != 0: failure( "ceil positive up (fract)" )

// negative
if int( ceil( -1.0 ) ) != -1: failure( "ceil on .0 (int)" )
if fract( ceil( -1.0 ) ) != 0: failure( "ceil on .0 (fract)" )
if int( ceil( -1.4999 ) ) != -1: failure( "ceil negative down (int)" )
if fract( ceil( -1.49999999 ) ) != 0: failure( "ceil negative down (fract)" )
if int( ceil( -1.5 ) ) != -1: failure( "ceil negative edge (int)" )
if fract( ceil( -1.5 ) ) != 0: failure( "ceil negative edge (fract)" )
if int( ceil( -1.99999999 ) ) != -1: failure( "ceil negative up (int)" )
if fract( ceil( -1.99999999 ) ) != 0: failure( "ceil negative up (fract)" )

// zero
if int( ceil( 0.0 ) ) != 0: failure( "ceil on 0.0 (int)" )
if fract( ceil( 0.0 ) ) != 0: failure( "ceil on 0.0 (fract)" )

// error
try
   ceil( "alpha" )
   failure( "Error not risen for parameters" )
end

success()

/* End of file */
